third_party/WebKit/Source/WebCore/html/shadow/DateTimeNumericFieldElement.cpp
@@ -108,7 +108,10 @@ int DateTimeNumericFieldElement::defaultValueForStepUp() const
 
 void DateTimeNumericFieldElement::didBlur()
 {
-    m_lastDigitCharTime = 0;
+    int value = typeAheadValue();
+    m_typeAheadBuffer.clear();
+    if (value >= 0)
+        setValueAsInteger(value, DispatchEvent);
     DateTimeFieldElement::didBlur();
 }
 
@@ -131,23 +134,28 @@ void DateTimeNumericFieldElement::handleKeyboardEvent(KeyboardEvent* keyboardEve
         return;
 
     UChar charCode = static_cast<UChar>(keyboardEvent->charCode());
-    if (charCode < ' ')
-        return;
-
-    DOMTimeStamp delta = keyboardEvent->timeStamp() - m_lastDigitCharTime;
-    m_lastDigitCharTime = 0;
-
     String number = localeForOwner().convertFromLocalizedNumber(String(&charCode, 1));
     const int digit = number[0] - '0';
     if (digit < 0 || digit > 9)
         return;
 
-    keyboardEvent->setDefaultHandled();
-    setValueAsInteger(m_hasValue && delta < typeAheadTimeout ? m_value * 10 + digit : digit, DispatchEvent);
-    if (m_value * 10 > m_range.maximum)
-        focusOnNextField();
+    DOMTimeStamp delta = keyboardEvent->timeStamp() - m_lastDigitCharTime;
+    m_lastDigitCharTime = keyboardEvent->timeStamp();
+
+    if (delta > typeAheadTimeout)
+        m_typeAheadBuffer.clear();
+    m_typeAheadBuffer.append(number);
+
+    int newValue = typeAheadValue();
+    if (m_range.isInRange(newValue))
+        setValueAsInteger(newValue, DispatchEvent);
     else
-        m_lastDigitCharTime = keyboardEvent->timeStamp();
+        updateVisibleValue(DispatchEvent);
+
+    if (m_typeAheadBuffer.length() >= DateTimeNumericFieldElement::formatValue(m_range.maximum).length() || newValue * 10 > m_range.maximum)
+        focusOnNextField();
+
+    keyboardEvent->setDefaultHandled();
 }
 
 bool DateTimeNumericFieldElement::hasValue() const
@@ -167,13 +175,12 @@ int DateTimeNumericFieldElement::minimum() const
 
 void DateTimeNumericFieldElement::setEmptyValue(EventBehavior eventBehavior)
 {
-    m_lastDigitCharTime = 0;
-
     if (isReadOnly())
         return;
 
     m_hasValue = false;
     m_value = 0;
+    m_typeAheadBuffer.clear();
     updateVisibleValue(eventBehavior);
 }
 
@@ -182,7 +189,6 @@ void DateTimeNumericFieldElement::setValueAsInteger(int value, EventBehavior eve
     m_value = clampValueForHardLimits(value);
     m_hasValue = true;
     updateVisibleValue(eventBehavior);
-    m_lastDigitCharTime = 0;
 }
 
 void DateTimeNumericFieldElement::stepDown()
@@ -190,6 +196,7 @@ void DateTimeNumericFieldElement::stepDown()
     int newValue = roundDown(m_hasValue ? m_value - 1 : defaultValueForStepDown());
     if (!m_range.isInRange(newValue))
         newValue = roundDown(m_range.maximum);
+    m_typeAheadBuffer.clear();
     setValueAsInteger(newValue, DispatchEvent);
 }
 
@@ -198,6 +205,7 @@ void DateTimeNumericFieldElement::stepUp()
     int newValue = roundUp(m_hasValue ? m_value + 1 : defaultValueForStepUp());
     if (!m_range.isInRange(newValue))
         newValue = roundUp(m_range.minimum);
+    m_typeAheadBuffer.clear();
     setValueAsInteger(newValue, DispatchEvent);
 }
 
@@ -211,8 +219,17 @@ int DateTimeNumericFieldElement::valueAsInteger() const
     return m_hasValue ? m_value : -1;
 }
 
+int DateTimeNumericFieldElement::typeAheadValue() const
+{
+    if (m_typeAheadBuffer.length())
+        return m_typeAheadBuffer.toString().toInt();
+    return -1;
+}
+
 String DateTimeNumericFieldElement::visibleValue() const
 {
+    if (m_typeAheadBuffer.length())
+        return formatValue(typeAheadValue());
     return m_hasValue ? value() : m_placeholder;
 }
 
