third_party/WebKit/Source/WebCore/html/shadow/DateTimeNumericFieldElement.h
@@ -88,6 +88,7 @@ private:
     String formatValue(int) const;
     int roundUp(int) const;
     int roundDown(int) const;
+    int typeAheadValue() const;
 
     DOMTimeStamp m_lastDigitCharTime;
     const String m_placeholder;
@@ -96,6 +97,7 @@ private:
     bool m_hasValue;
     int m_step;
     int m_stepBase;
+    mutable StringBuilder m_typeAheadBuffer;
 };
 
 } // namespace WebCore
